--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "angular": "^1.6.7",
-    "angular-route": "^1.6.7"
+    "angular-route": "^1.6.7",
+    "a0-angular-storage": "^0.0.15"
   }
 }
